Fixed searchbar on small screens

--- a/style.css
+++ b/style.css
@@ -85,6 +85,10 @@ body {
   padding-left: 5rem;
 }
 
+.hidden {
+  display: none;
+}
+
 /* --------TEXT---------- */
 
 .navi-small {
@@ -394,7 +398,7 @@ body {
   top: 10%;
   height: 60%;
   width: 100%;
-    max-width: 700px;
+  max-width: 700px;
 }
 
 .image-gallery-content img {
